--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                 <h4 class="h4 service-item-title">Ремонт ГРМ</h4>
 
                 <p class="service-item-text">
-                  The most modern and high-quality design made at a professional level.
+                  Система ГРМ (газораспределительный механизм) — ключевой компонент автомобильного двигателя.
                 </p>
               </div>
 
@@ -264,7 +264,7 @@
                 <h4 class="h4 service-item-title">Тормозная система</h4>
 
                 <p class="service-item-text">
-                  High-quality development of sites at the professional level.
+                  Обеспечивает управляемое замедление или остановку колес для безопасного управления движением.
                 </p>
               </div>
 
@@ -280,7 +280,7 @@
                 <h4 class="h4 service-item-title">Автоэлектрика</h4>
 
                 <p class="service-item-text">
-                  Professional development of applications for iOS and Android.
+                  Электрооборудование автомобиля — система, для питания света, зажигания и других устройств.
                 </p>
               </div>
 
@@ -296,7 +296,7 @@
                 <h4 class="h4 service-item-title">Подвеска и рулевая</h4>
 
                 <p class="service-item-text">
-                  I make high-quality photos of any category at a professional level.
+                  Ходовая часть автомобиля — комплекс систем, включающий подвеску, тормоза, рулевое управление и колеса, обеспечивающий управляемость и комфорт во время движения.
                 </p>
               </div>
 
