--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
           </li>
 
           <li class="contact-item">
-            <a href="https://wa.me/996558110933?text=Здравствуйте Crafter Hub" target="_blank">Start chat on WhatsApp>
+            <a href="https://wa.me/996558110933?text=Здравствуйте Crafter Hub">
             <div class="icon-box">
               <ion-icon name="logo-whatsapp"></ion-icon>
             </div>
